--- a/index.html
+++ b/index.html
@@ -44,35 +44,35 @@
             </div>
             <div class="content-right">
                 <div class="product">
-                    <img src="image/Sneaker.jpeg" alt="nike shoes">
+                    <img src="Sneaker.jpeg" alt="nike shoes">
                     <h4>Nike Sneaker</h4>
                     <p class="catagory">Men's shoes</p>
                     <p class="color">color: Black</p>
                     <p class="price">₹ 10 999</p>
                 </div>
                 <div class="product">
-                    <img src="image/air-max-1-lx-shoes-8mc40q.png" alt="nike shoes">
+                    <img src="air-max-1-lx-shoes-8mc40q.png" alt="nike shoes">
                     <h4>Nike Air max 1</h4>
                     <p class="catagory">Men's shoes</p>
                     <p class="color">color: white</p>
                     <p class="price">₹ 14 999</p>
                 </div>
                 <div class="product">
-                    <img src="image/nike air peg 2k5.jpeg" alt="nike shoes">
+                    <img src="nike air peg 2k5.jpeg" alt="nike shoes">
                     <h4>Nike Air Peg 2K5</h4>
                     <p class="catagory">Men's shoes</p>
                     <p class="color">color: white</p>
                     <p class="price">₹ 13 995</p>
                 </div>
                 <div class="product">
-                    <img src="image/air-jordan.png" alt="nike shoes">
+                    <img src="air-jordan.png" alt="nike shoes">
                     <h4>Nike Air Jordan 1</h4>
                     <p class="catagory">Men's shoes</p>
                     <p class="color">color: white</p>
                     <p class="price">₹ 25 999</p>
                 </div>
                 <div class="product">
-                    <img src="image/nike lunar roam1.png.webp" alt="nike shoes">
+                    <img src="nike lunar roam1.png.webp" alt="nike shoes">
                     <h4>Nike Lunar roam</h4>
                     <p class="catagory">Men's shoes</p>
                     <p class="color">color: Blue</p>
